RESOLVED FIXED147175
Web Inspector: [Mac] "Open Image In New Window" context menu item does nothing on an image
https://bugs.webkit.org/show_bug.cgi?id=147175
Summary Web Inspector: [Mac] "Open Image In New Window" context menu item does nothin...
Joseph Pecoraro
Reported 2015-07-21 17:39:32 PDT
* SUMMARY "Open Image In New Window" context menu item does nothing on an image * STEPS TO REPRODUCE 1. Inspect webkit.org 2. Select an image resource 3. Right click the image 4. Select the "Open Image in New Window" context menu => nothing happens * NOTES - Context Menus that don't work should be removed by default. - Ultimately we should include better context menus (more like Safari). For instance a "Save Image As" menu item would be useful here, and apparently done by Safari not WebKit.
Attachments
[PATCH] Proposed Fix (5.52 KB, patch)
2015-07-21 17:41 PDT, Joseph Pecoraro
no flags
Joseph Pecoraro
Comment 1 2015-07-21 17:39:58 PDT
Joseph Pecoraro
Comment 2 2015-07-21 17:41:47 PDT
Created attachment 257224 [details] [PATCH] Proposed Fix
WebKit Commit Bot
Comment 3 2015-07-21 18:50:59 PDT
Comment on attachment 257224 [details] [PATCH] Proposed Fix Clearing flags on attachment: 257224 Committed r187146: <http://trac.webkit.org/changeset/187146>
WebKit Commit Bot
Comment 4 2015-07-21 18:51:02 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.