Web Inspector: [Mac] "Open Image In New Window" context menu item does nothing on an image https://bugs.webkit.org/show_bug.cgi?id=147175

Patch by Joseph Pecoraro <pecoraro@apple.com> on 2015-07-21
Reviewed by Timothy Hatcher.

Source/WebKit/mac:

* WebCoreSupport/WebInspectorClient.mm:
(-[WebInspectorWindowController webView:contextMenuItemsForElement:defaultMenuItems:]):
Remove default context menus that won't work in the inspector page.

Source/WebKit2:

* UIProcess/mac/WebInspectorProxyMac.mm:
(WebKit::getContextMenuFromProposedMenu):
(WebKit::WebInspectorProxy::platformCreateInspectorPage):
Remove default context menus that won't work in the inspector page.

Canonical link: https://commits.webkit.org/165222@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@187146 268f45cc-cd09-0410-ab3c-d52691b4dbfc